--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -12,7 +12,7 @@ h2 {
      margin: auto;
      padding: 5px;
      font-weight: bolder;
-     color: orange;
+     color: white;
      text-align: center;
      font-family: Verdana, sans-serif;
      position: absolute;
