--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -14,7 +14,7 @@ h2 {
      font-weight: bolder;
      color: white;
      text-align: center;
-     font-family: Verdana, sans-serif;
+     font-family: Geneva, sans-serif;
      position: absolute;
      opacity: 0.8;
      top: 50%;
