--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -23,12 +23,13 @@ h2 {
 }
 
 #button {
-     width: 20%;
+     width: 15%;
      font-size: 20px;
      opacity: 0.8;
      color: white;
      height: 50px;
      border-width: 2px;
+     border-radius: 5px;
      border-color: white;
      background-color: black;
      text-align: center;
