--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -60,7 +60,7 @@ select {
 }
 .form-box {
      width: 100%;
-     margin: auto;
+/*      margin: auto; */
      background: black;
      padding: 40px;
      border-radius: 20px;
