--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,6 +8,14 @@ a:visited {
 a:hover {
      color: orange;
 }
+.fa fa-envelope{
+     color: orange;
+     font-size: 25px;
+}
+.fa fa-key{
+     color:orange;
+     font-size: 25px;
+}
 h1 {
      text-align: center;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
