--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -8,6 +8,18 @@ a:visited {
 a:hover {
      color: orange;
 }
+#myEmail {
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+     font-size: 25px;
+}
+#myInput {
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+     font-size: 25px;
+}
+i {
+     color: orange;
+     font-size: 25px;
+}
 h1 {
      text-align: center;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
