--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -24,7 +24,7 @@ h1 {
      text-align: center;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     font-size: 50px;
+     font-size: 40px;
      color: white;
 }
 h2 {
@@ -77,7 +77,7 @@ select {
      padding: 40px;
      border-radius: 20px;
      opacity: 0.8;
-     transform: translateX(42%) translateY(75%);
+     transform: translateY(75%);
 }
 .input-box {
      margin: 31px auto;
@@ -101,14 +101,6 @@ select {
 }
 .eye2 {
      position: absolute;
-}
-.fa fa-envelope{
-     color: orange;
-     font-size: 25px;
-}
-.fa fa-key{
-     color:orange;
-     font-size: 25px;
 }
 #hide1 {
      display: none;
