--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -14,7 +14,7 @@ a:hover {
 }
 #myInput {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 23px;
+     font-size: 20px;
 }
 i {
      color: orange;
@@ -77,7 +77,7 @@ select {
      padding: 40px;
      border-radius: 20px;
      opacity: 0.8;
-     transform: translateY(75%);
+     transform: translateX(20%) translateY(75%);
 }
 .input-box {
      margin: 31px auto;
