--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -10,9 +10,8 @@ h2 {
      font-size: 50px;
      width: 35%;
      background-color: black;
-     border-radius: 10px;
      margin: auto;
-     padding: 5px;
+     padding: 5px 5px 10px 5px;
      font-weight: bolder;
      color: white;
      text-align: center;
