--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -10,13 +10,14 @@ h2 {
      font-size: 40px;
      margin: auto;
      width: 100%;
-     padding: 5px;
+     background-color: black;
+     padding: 5px 5px 10px 5px;
      font-weight: bolder;
      color: white;
      text-align: center;
      font-family: Verdana, sans-serif;
      position: absolute;
-     opacity: 0.8;
+     opacity: 0.4;
      top: 50%;
      left: 50%;
      transform: translateX(-49%) translateY(-420%);
