--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -7,11 +7,11 @@ html {
 }
 
 h2 {
-     font-size: 35px;
+     font-size: 32px;
      margin: auto;
-     width: 75%;
+     width: 70%;
      background-color: black;
-     padding: 5px 5px 10px 5px;
+     padding: 10px;
      font-weight: bolder;
      color: white;
      text-align: center;
