--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -26,6 +26,7 @@ h1 {
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      font-size: 40px;
      color: white;
+     padding: 10px;
 }
 h2 {
      color: orange;
