--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -16,6 +16,7 @@ a:hover {
 #myInput {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
      font-size: 20px;
+     padding-bottom: 10px;
 }
 i {
      color: orange;
@@ -60,7 +61,7 @@ select {
      width: 80%;
      display: block;
      outline: none;
-     padding: 10px 0;
+     padding: 15px 10px 15px 10px ;
      border: ipx solid orange;
      cursor: pointer;
      background: transparent;
