--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -15,7 +15,7 @@ a:hover {
 }
 #myInput {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 20px;
+     font-size: 25px;
      padding-bottom: 10px;
 }
 i {
@@ -36,6 +36,7 @@ h2 {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(+70%) translateY(-100%);
+     paddin-top: 10px;
 }
 p {
      color: orange;
@@ -43,6 +44,7 @@ p {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(10%) translateY(+100%);
+     padding-top: 10px;
 }
 option {
      color: orange;
