--- a/public/css/mtenant.css
+++ b/public/css/mtenant.css
@@ -1,26 +1,13 @@
 h1 {
      text-align: center;
      color: white;
-     font-size: 25px;
+     font-size: 40px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-h2 {
-     color: orange;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(18%) translateY(+50%);
-}
-h3 {
-     color: white;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(18%) translateY(+20%);
 }
 p {
      color: orange;
+     font-size: 25px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(10%) translateY(+50%);
@@ -31,11 +18,10 @@ p {
      display: block;
      outline: none;
      padding: 10px 0;
-     border: ipx solid orange;
      cursor: pointer;
      background: transparent;
      color: orange;
-     font-size: 16px;
+     font-size: 30px;
      border-radius: 10px;
      transform: translateX(5%) translateY(+50%);
 }
@@ -43,7 +29,7 @@ p {
      background-color: green;
 }
 .form-box {
-     width: 400px;
+     width: 100%;
      margin: auto;
      background: black;
      padding: 20px;
