--- a/views/Tenant.hbs
+++ b/views/Tenant.hbs
@@ -5,8 +5,8 @@
     <title>Tenant</title>
     <meta name="viewport" content="width=device-width,intial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" media="screen and (max-width: 500px)" type="text/css" href="/css/tenant.css">
-    <link rel="stylesheet" media="screen and (min-width: 499px)" type="text/css" href="/css/mtenant.css">
+    <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/tenant.css">
+    <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mtenant.css">
     <link rel="icon" href="icon.png" type="image/png">
 </head>
 
