--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -1,121 +1,136 @@
-a:link {
-     color: white;
-     text-decoration: solid;
+
+body {
+     background-color: orange;
+     margin: 0;
 }
-a:visited {
-     color: white;
+.container {
+     width: 40%;
+     height: 65vh;
+     background-image: url("back.jpg");
+     border-radius: 30px;
+     padding: 0 0 0 30px;
+     margin: auto;
+     opacity: 0.8;
+     background-size: cover;
+     background-attachment: fixed;
+     background-position: center;
+     background-repeat: no-repeat;
+     transform: translateY(25%);
 }
-a:hover {
-     color: orange;
+.container::after {
+     content: "";
+     display: table;
+     clear: both;
 }
-#myEmail {
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 20px;
+.login-box {
+     float: left;
+     width: 70%;
 }
-#myInput {
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 20px;
+.signup-box {
+     float: left;
+     width: 30%;
+     height: 100%;
+     text-align: center;
+     background-color: black;
+     opacity: 0.7;
+     border-radius: 0 30px 30px 0;
+}
+.child {
+     transform: translateX(0%) translateY(150%);
 }
 h1 {
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     font-size: 35px;
+     font-family: "Poppins";
+     font-size: 25px;
      color: white;
-     padding: 10px;
+     text-align: left;
+     margin-top: 30px;
+     letter-spacing: 1px;
 }
 h2 {
+     font-family: "Poppins";
+     font-size: 16px;
      color: white;
-     font-size: 25px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(+70%) translateY(-60%);
+     letter-spacing: 1px;
 }
-p {
-     color: white;
-     font-size: 25px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+120%);
-}
-option {
-     color: orange;
-     background-color: black;
-}
-select {
-     background-color: black;
-     color: white;
-     width: 200px;
-     height: 25px;
+
+.input-box input[type="email"] {
+     padding: 5px 5px 5px 30px;
      border-radius: 5px;
-     cursor: pointer;
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     background: black;
+     width: 75%;
+}
+.input-box input[type="email"]:focus {
+     border: 3px solid lightseagreen;
+}
+.input-box input[type="password"]:focus {
+     border: 3px solid lightseagreen;
+}
+.input-box input[type="text"]:focus {
+     border: 3px solid lightseagreen;
+}
+.input-box input[type="password"] {
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     background: black;
+     width: 75%;
+}
+.input-box input[type="text"] {
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     background: black;
+     width: 75%;
+}
+
+.input-box i {
+     position: absolute;
+}
+.icon {
+     padding: 10px;
+     min-width: 40px;
+     color: white;
+}
+.eye {
+     position: absolute;
 }
 #button {
-     margin: 40px auto 20px;
-     width: 90%;
-     display: block;
-     outline: none;
-     padding: 15px 10px 15px 10px ;
-     cursor: pointer;
-     background: transparent;
+     width: 37%;
+     height: 6vh;
+     background-color: black;
      color: white;
-     opacity: 0.8;
-     font-size: 30px;
-     border-radius: 10px;
+     padding: 4px;
      border: 3px solid orange;
+     border-radius: 12px;
+     text-align: center;
+     margin-bottom: 30px;
+     font-family: "Poppins";
+     font-size: 18px;
+     letter-spacing: 1px;
+}
+#button1 {
+     width: 60%;
+     height: 4vh;
+     background-color: black;
+     color: white;
+     padding: 4px;
+     border: 3px solid orange;
+     border-radius: 12px;
+     text-align: center;
+     font-family: "Poppins";
+     font-size: 13px;
+     letter-spacing: 1px;
 }
 #button:hover {
      background-color: green;
 }
-.form-box {
-     width: 100%;
-     margin: auto;
-     background: black;
-     padding: 60px;
-     border-radius: 20px;
-     opacity: 0.8;
-     transform: translateX(37%) translateY(75%);
-}
-.input-box {
-     margin: 31px auto;
-     width: 90%;
-     padding-top: 5px;
-}
-.input-box input {
-     width: 90%;
-     border: none;
-     outline: none;
-     border-radius: 10px;
-     padding: 5px 5px 5px 9px;
-     background: transparent;
-     color: white;
-}
- input:focus{
-     border: 3px solid green;
-}
-
-.eye {
-     position: absolute;
-}
-.eye1 {
-     position: absolute;
-}
-.eye2 {
-     position: absolute;
-}
-#hide1 {
-     display: none;
-}
-#hide3 {
-     display: none;
-}
-
-html {
-     background: url(back.png) no-repeat center center fixed;
-     -webkit-background-size: cover;
-     -moz-background-size: cover;
-     -o-background-size: cover;
-     background-size: cover;
-     overflow: hidden;
-
+#button1:hover {
+     background-color: green;
 }
