--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -38,11 +38,11 @@ html {
      border-radius: 0 30px 30px 0;
 }
 .child {
-     transform: translateX(0%) translateY(150%);
+     transform: translateX(0%) translateY(200%);
 }
 h1 {
      font-family: "Poppins";
-     font-size: 22px;
+     font-size: 20px;
      color: white;
      text-align: left;
      margin-top: 20px;
@@ -58,6 +58,7 @@ h2 {
 .input-box input[type="email"] {
      padding: 5px 5px 5px 30px;
      border-radius: 5px;
+     border: 3px solid white;
      font-family: "Poppins";
      font-size: 14px;
      color: white;
@@ -76,6 +77,7 @@ h2 {
 .input-box input[type="password"] {
      padding: 5px 5px 5px 30px;
      border-radius: 5px;
+     border: 3px solid white;
      font-family: "Poppins";
      font-size: 14px;
      color: white;
@@ -85,6 +87,7 @@ h2 {
 .input-box input[type="text"] {
      padding: 5px 5px 5px 30px;
      border-radius: 5px;
+     border: 3px solid white
      font-family: "Poppins";
      font-size: 14px;
      color: white;
@@ -111,7 +114,7 @@ h2 {
      border: 3px solid orange;
      border-radius: 6px;
      text-align: center;
-     margin-bottom: 30px;
+     margin-bottom: 20px;
      font-family: "Poppins";
      font-size: 16px;
      letter-spacing: 1px;
