--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -1,4 +1,13 @@
-
+a:hover {
+     color: orange;
+}
+a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: "Poppins";
+    letter-spacing: 1px;
+}
 body {
      margin: 0;
 }
