--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -24,7 +24,7 @@ html {
      padding: 0 20px 0 20px;
      margin: auto;
      opacity: 0.8;
-     background: url(formBack.png) no-repeat center center fixed;
+     background: url(formBack.jpg) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
