--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -83,6 +83,7 @@ h2 {
 #button {
      width: 50%;
      background-color: gray;
+     opacity: 0.7;
      color: white;
      padding: 2px;
      border: 3px solid white;
