--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -1,3 +1,6 @@
+::placeholder {
+     color: orange;
+}
 a:hover {
      color: orange;
 }
@@ -82,7 +85,7 @@ h2 {
 }
 #button {
      width: 50%;
-     background-color: gray;
+     background-color: black;
      opacity: 0.7;
      color: white;
      padding: 2px;
