--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,12 @@
-
+a:hover {
+     color: orange;
+}
+a {
+     color: white;
+     text-decoration: none;
+     font-family: "Poppins";
+     font-size: 13px;
+}
 body {
      margin: 0;
 }
@@ -11,7 +19,6 @@ html {
 }
 .container {
      width: 40%;
-     height: 65vh;
      background-image: url("formBack.jpg");
      border-radius: 30px;
      padding: 0 0 0 30px;
@@ -28,19 +35,7 @@ html {
      display: table;
      clear: both;
 }
-.login-box {
-     float: left;
-     width: 70%;
-}
-.signup-box {
-     float: left;
-     width: 30%;
-     height: 100%;
-     text-align: center;
-     background-color: black;
-     opacity: 0.7;
-     border-radius: 0 30px 30px 0;
-}
+
 .child {
      transform: translateX(0%) translateY(150%);
 }
@@ -59,7 +54,7 @@ h2 {
      letter-spacing: 1px;
 }
 
-.input-box input[type="email"] {
+.input-box input {
      padding: 5px 5px 5px 30px;
      border-radius: 5px;
      font-family: "Poppins";
@@ -68,32 +63,8 @@ h2 {
      background: transparent;
      width: 75%;
 }
-.input-box input[type="email"]:focus {
+.input-box input:focus {
      border: 3px solid green;
-}
-.input-box input[type="password"]:focus {
-     border: 3px solid green;
-}
-.input-box input[type="text"]:focus {
-     border: 3px solid green;
-}
-.input-box input[type="password"] {
-     padding: 5px 5px 5px 30px;
-     border-radius: 5px;
-     font-family: "Poppins";
-     font-size: 14px;
-     color: white;
-     background: transparent;
-     width: 75%;
-}
-.input-box input[type="text"] {
-     padding: 5px 5px 5px 30px;
-     border-radius: 5px;
-     font-family: "Poppins";
-     font-size: 14px;
-     color: white;
-     background: transparent;
-     width: 75%;
 }
 
 .input-box i {
@@ -109,7 +80,6 @@ h2 {
 }
 #button {
      width: 37%;
-     height: 7vh;
      background-color: black;
      color: white;
      padding: 4px 4px 7px 4px;
@@ -124,7 +94,6 @@ h2 {
 }
 #button1 {
      width: 60%;
-     height: 6vh;
      background-color: black;
      color: white;
      padding: 4px 4px 6px 4px;
