--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,3 +1,6 @@
+::placeholder {
+     color: orange;
+}
 a:hover {
      color: orange;
 }
@@ -6,6 +9,7 @@ a {
      text-decoration: none;
      font-family: "Poppins";
      font-size: 13px;
+     letter-spacing: 0.5px
 }
 body {
      margin: 0;
@@ -92,21 +96,8 @@ h2 {
      font-size: 18px;
      letter-spacing: 1px;
 }
-#button1 {
-     width: 60%;
-     background-color: black;
-     color: white;
-     padding: 4px 4px 6px 4px;
-     border: 3px solid orange;
-     border-radius: 8px;
-     text-align: center;
-     font-family: "Poppins";
-     font-size: 13px;
-     letter-spacing: 1px;
-}
+
 #button:hover {
      background-color: green;
 }
-#button1:hover {
-     background-color: green;
-}
+
