--- a/public/css/login.css
+++ b/public/css/login.css
@@ -25,7 +25,7 @@ html {
      width: 40%;
      background-image: url("formBack.jpg");
      border-radius: 30px;
-     padding: 0 0 0 30px;
+     padding: 30px;
      margin: auto;
      opacity: 0.8;
      background-size: cover;
@@ -48,7 +48,6 @@ h1 {
      font-size: 25px;
      color: white;
      text-align: left;
-     margin-top: 30px;
      letter-spacing: 1px;
 }
 h2 {
@@ -90,7 +89,6 @@ h2 {
      border: 3px solid orange;
      border-radius: 12px;
      text-align: center;
-     margin-bottom: 30px;
      opacity: 0.8;
      font-family: "Poppins";
      font-size: 18px;
