--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,40 +1,40 @@
-a:link {
-     color: white;
-     text-decoration: solid;
-}
-a:visited {
-     color: white;
+body {
+     background-color: orange;
+     margin: 0;
 }
 a:hover {
      color: orange;
 }
-h1 {
-     text-align: center;
+a {
      color: white;
+     font-family: "Poppins";
+     font-size: 15px;
+     text-decoration: none;
+}
+.container {
+     width: 30%;
+     background-image: url("formBack.jpg");
+     padding: 30px;
+     margin: auto;
+     opacity: 0.8;
+     background-size: cover;
+     background-attachment: fixed;
+     background-position: center;
+     background-repeat: no-repeat;
+     transform: translateY(0%);
+}
+h1 {
+     font-family: "Poppins";
      font-size: 25px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     color: white;
+     text-align: center;
+     letter-spacing: 1px;
 }
 h2 {
+     font-family: "Poppins";
+     font-size: 16px;
      color: white;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(+70%) translateY(-30%);
-}
-h3 {
-     color: white;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+150%);
-}
-p {
-     color: orange;
-     font-size: 20px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+50%);
+     letter-spacing: 1px;
 }
 option {
      color: orange;
@@ -43,58 +43,56 @@ option {
 select {
      background-color: black;
      color: white;
-     width: 200px;
-     height: 25px;
+     width: 84%;
+     height: 32px;
      border-radius: 5px;
+     border: 2px solid white;
+     padding-left: 20px;
+     font-family: "Poppins";
+     font-size: 12px;
      cursor: pointer;
 }
-#button {
-     margin: 40px auto 20px;
-     width: 80%;
-     display: block;
-     outline: none;
-     padding: 10px 0;
-     cursor: pointer;
-     background: transparent;
-     color: orange;
-     opacity: 0.8;
-     font-size: 16px;
-     border-radius: 10px;
+select:focus {
+     border: 2px solid green;
 }
-#button:hover {
-     background-color: green;
-}
-.form-box {
-     width: 450px;
-     margin: auto;
-     background: black;
-     padding: 20px;
-     border-radius: 20px;
-     opacity: 0.8;
-     transform: translateX(0%) translateY(0%);
-}
-.input-box {
-     margin: 31px auto;
-     width: 80%;
-     padding-top: 5px;
-}
+
 .input-box input {
-     width: 90%;
-     border: none;
-     outline: none;
-     background: transparent;
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     font-family: "Poppins";
+     font-size: 14px;
      color: white;
+     background: black;
+     width: 75%;
 }
-html {
-     background: url(back.png) no-repeat center center fixed;
-     -webkit-background-size: cover;
-     -moz-background-size: cover;
-     -o-background-size: cover;
-     background-size: cover;
+.input-box input:focus {
+     border: 3px solid green;
+}
+
+.input-box i {
+     position: absolute;
+}
+.icon {
+     padding: 10px;
+     min-width: 40px;
+     color: white;
 }
 .eye {
      position: absolute;
 }
-#hide1 {
-     display: none;
+#button {
+     width: 37%;
+     background-color: black;
+     color: white;
+     padding: 7px;
+     border: 3px solid orange;
+     border-radius: 12px;
+     text-align: center;
+     font-family: "Poppins";
+     font-size: 18px;
+     letter-spacing: 1px;
+}
+
+#button:hover {
+     background-color: green;
 }
