--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -47,7 +47,7 @@ h2 {
 }
 option {
      color: orange;
-     background-color: black;
+     background: transparent;
 }
 select {
      background-color: black;
@@ -71,7 +71,7 @@ select:focus {
      font-family: "Poppins";
      font-size: 14px;
      color: white;
-     background: black;
+     background: transparent;
      width: 75%;
 }
 .input-box input:focus {
