--- a/public/css/login.css
+++ b/public/css/login.css
@@ -34,15 +34,7 @@ html {
      background-repeat: no-repeat;
      transform: translateY(25%);
 }
-.container::after {
-     content: "";
-     display: table;
-     clear: both;
-}
 
-.child {
-     transform: translateX(0%) translateY(150%);
-}
 h1 {
      font-family: "Poppins";
      font-size: 25px;
@@ -63,7 +55,8 @@ h2 {
      font-family: "Poppins";
      font-size: 14px;
      color: white;
-     background: transparent;
+     background: black;
+     opacity: 0.8;
      width: 75%;
 }
 .input-box input:focus {
