--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -60,7 +60,8 @@ h2 {
      font-family: "Poppins";
      font-size: 12px;
      color: white;
-     background: transparent;
+     background: black;
+     opacity: 0.8;
      width: 70%;
 }
 .input-box input:focus {
