--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,8 @@
 ::placeholder {
-     color: orange;
+     color: black;
+}
+* {
+     box-sizing: border-box;
 }
 a:hover {
      color: orange;
@@ -55,8 +58,7 @@ h2 {
      font-family: "Poppins";
      font-size: 14px;
      color: white;
-     background: black;
-     opacity: 0.8;
+     background: transparent;
      width: 75%;
 }
 .input-box input:focus {
