--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -95,8 +95,9 @@ select:focus {
 #button {
      width: 40%;
      background-color: black;
+     opacity: 0.8;
      color: white;
-     padding: 5px;
+     padding: 4px 4px 7px 4px;
      border: 3px solid orange;
      border-radius: 12px;
      text-align: center;
