--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -71,6 +71,7 @@ select:focus {
 .input-box input {
      padding: 5px 5px 5px 30px;
      border-radius: 5px;
+     border: 3px solid white;
      font-family: "Poppins";
      font-size: 14px;
      color: white;
