--- a/public/css/login.css
+++ b/public/css/login.css
@@ -55,6 +55,7 @@ h2 {
 .input-box input {
      padding: 5px 5px 5px 30px;
      border-radius: 5px;
+     border: 3px solid white;
      font-family: "Poppins";
      font-size: 14px;
      color: white;
