--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -24,6 +24,22 @@ html {
      -o-background-size: cover;
      background-size: cover;
 }
+option {
+     color: orange;
+     background-color: black;
+}
+select {
+     background-color: black;
+     color: white;
+     width: 85%;
+     height: 32px;
+     border-radius: 5px;
+     border: 2px solid white;
+     padding-left: 20px;
+     font-family: "Poppins";
+     font-size: 12px;
+     cursor: pointer;
+}
 .container {
      width: 80%;
      padding:  20px 20px 30px 30px;
