--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -43,7 +43,7 @@ select {
 }
 .container {
      width: 100%;
-/*      height: 100vh; */
+     height: 100%;
      padding:  20px 20px 30px 30px;
      margin: 0;
      opacity: 0.8;
