--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -45,14 +45,14 @@ select {
      width: 100%;
      height: 100%;
      padding:  20px 20px 30px 30px;
-     margin: 0;
+     margin-bottom: -30px;
      opacity: 0.8;
      background: url(formBack.jpg) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
-     transform: translateY(15%);
+/*      transform: translateY(15%); */
 }
 
 h1 {
