--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -43,6 +43,7 @@ select {
 }
 .container {
      width: 100%;
+     height: 100vh;
      position: fixed;
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
@@ -51,7 +52,6 @@ select {
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
-     transform: translateY(3%);
 }
 
 h1 {
