--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -35,7 +35,7 @@ html {
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
-     transform: translateY(30%);
+     transform: translateX(7%) translateY(40%);
 }
 
 h1 {
