--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -26,7 +26,7 @@ a {
 .container {
      width: 40%;
      background-image: url("formBack.jpg");
-     padding: 30px;
+     padding: 30px 30px 30px 50px;
      margin: auto;
      opacity: 0.8;
      background-size: cover;
