--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,6 +1,21 @@
 ::placeholder{
      color: black;
 }
+.section {
+     width: 100%;
+     height: 100vh;
+     display: flex;
+     position: relative;
+     align-items: center;
+     justify-content: center;
+     overflow: hidden;
+}
+.video-container {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+}
 * {
      box-sizing: border-box;
 }
