--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -22,13 +22,13 @@
 body {
      margin: 0;
 }
-html {
+/* html {
      background: url(back.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
-}
+} */
 a:hover {
      color: orange;
 }
