--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,34 +1,19 @@
 ::placeholder{
      color: black;
 }
-.section {
-     width: 100%;
-     height: 100vh;
-     display: flex;
-     position: relative;
-     align-items: center;
-     justify-content: center;
-     overflow: hidden;
-}
-.video-container {
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-}
 * {
      box-sizing: border-box;
 }
 body {
      margin: 0;
 }
-/* html {
+html {
      background: url(back.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
-} */
+}
 a:hover {
      color: orange;
 }
