--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -28,7 +28,8 @@ a {
      background-image: url("formBack.jpg");
      padding: 30px 30px 30px 60px;
 /*      margin: auto; */
-     left: 0;
+     position: absolute;
+     right: 0;
      opacity: 0.8;
      background-size: cover;
      background-attachment: fixed;
