--- a/public/css/login.css
+++ b/public/css/login.css
@@ -28,7 +28,7 @@ html {
      width: 50%;
      height: 100vh;
      background-image: url("formBack.jpg");
-     border-radius: 30px;
+/*      border-radius: 30px; */
      padding: 30px;
      position: absolute;
      right: 0;
@@ -37,7 +37,7 @@ html {
      background-attachment: fixed;
      background-position: center;
      background-repeat: no-repeat;
-     transform: translateY(25%);
+/*      transform: translateY(25%); */
 }
 
 h1 {
