--- a/public/css/login.css
+++ b/public/css/login.css
@@ -27,16 +27,17 @@ html {
 .container {
      width: 50%;
      height: 100vh;
-     background-image: url("formBack.jpg");
+     background: black;
+/*      background-image: url("formBack.jpg"); */
 /*      border-radius: 30px; */
-     padding: 30px;
+     padding: 30px 30px 30px 60px;
      position: absolute;
      right: 0;
      opacity: 0.8;
-     background-size: cover;
+/*      background-size: cover;
      background-attachment: fixed;
      background-position: center;
-     background-repeat: no-repeat;
+     background-repeat: no-repeat; */
 /*      transform: translateY(25%); */
 }
 
@@ -62,7 +63,7 @@ h2 {
      font-size: 14px;
      color: white;
      background: transparent;
-     width: 85%;
+     width: 70%;
 }
 .input-box input:focus {
      border: 3px solid green;
