--- a/public/css/login.css
+++ b/public/css/login.css
@@ -27,18 +27,16 @@ html {
 .container {
      width: 50%;
      height: 100vh;
-     background: black;
-/*      background-image: url("formBack.jpg"); */
-/*      border-radius: 30px; */
+     background-image: url("formBack.png");
      padding: 30px 30px 30px 60px;
      position: absolute;
      right: 0;
      opacity: 0.8;
-/*      background-size: cover;
+     background-size: cover;
      background-attachment: fixed;
      background-position: center;
-     background-repeat: no-repeat; */
-/*      transform: translateY(25%); */
+     background-repeat: no-repeat; 
+     transform: translateY(25%); 
 }
 
 h1 {
