--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -125,7 +125,7 @@ h4 {
      cursor: pointer;
 }
 html {
-     background: url(back.png) no-repeat center center fixed;
+     background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
