--- a/public/css/mcontact.css
+++ b/public/css/mcontact.css
@@ -48,7 +48,7 @@ h2 {
 }
 
 html {
-     background: url(back.png) no-repeat center center fixed;
+     background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
