--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -34,7 +34,11 @@ html {
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
-     transform: translateX(12%) translateY(50%);
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     -webkit-transform: transform( -50%, -50%);
+     transform: translateX(-50%) translateY(-50%);
 }
 
 h1 {
