--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -3,6 +3,9 @@
 }
 * {
      box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     border: 0;
 }
 a:hover {
      color: orange;
@@ -14,8 +17,9 @@ a {
     font-family: "Poppins";
     letter-spacing: 0.5px;
 }
-body {
+body,html {
      margin: 0;
+     padding: 0;
 }
 html {
      background: url(mBack.png) no-repeat center center fixed;
