--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -67,7 +67,7 @@ h2 {
      font-family: "Poppins";
      font-size: 14px;
      color: white;
-     padding: 0 0 5px 0;
+     padding-top: 5px;
      letter-spacing: 1px;
 }
 
