--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -59,7 +59,7 @@ select {
      left: 50%;
      position: absolute;
      -webkit-transform: transform(-50%,-50%);
-     transform: translate(-50%,-50%);
+     transform: translateX(-50%) translateY(-50%);
 }
 
 h1 {
